--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ cache:
     - vendor/ruby
 
 before_script:
+  - export DEBIAN_FRONTEND="noninteractive"
   - apt update
   - apt -y install wget sudo openssl gnupg lsb-release
 
