--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ cache:
 before_script:
   - export DEBIAN_FRONTEND="noninteractive"
   - apt-get update
-  - apt-get --install-suggests -y install wget sudo openssl gnupg lsb-release
+  - apt-get -y install wget sudo openssl gnupg lsb-release python3-dev
 
 dependencies:
   stage: build
