--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,11 +21,13 @@ stages:          # List of stages for jobs, and their order of execution
 #  - test
 #  - deploy
 
+variables:
+    TERM: xterm-color
+
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
-    - env
-#    - bash deploy.sh
+    - bash deploy.sh
  
 #unit-test-job:   # This job runs in the test stage.
 #  stage: test    # It only starts when the job in the build stage completes successfully.
